Fixed centering on mobile for project images

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -24,7 +24,6 @@
 }
 
 .rightProjectImageContainer {
-	padding-left: 100px !important;
 	display: flex;
 	justify-content: space-around;
 }
@@ -56,6 +55,7 @@
 }
 
 .projectDescriptionRight {
+	padding-right: 100px !important;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -160,7 +160,6 @@
 	}
 
 	.rightProjectImageContainer {
-		padding-left: 0px !important;
 		margin-top: 30px;
 		margin-bottom: 15px;
 	}
@@ -177,6 +176,10 @@
 
 	.projectDescriptionLeft {
 		padding-left: 0px !important;
+	}
+
+	.projectDescriptionRight {
+		padding-right: 0px !important;
 	}
 
 	.projectTitleAndInfoContainer {
